# yellow-tomato

./: .gitignore  .qmake.stash  CMakeLists.txt  Dialog.cpp  Dialog.h  LICENSE  Makefile  Makefile.Debug  Makefile.Release  README.md  TomatoState.cpp  TomatoState.h  analogclock.cpp  main.cpp  run_resource.rc  tomato.ui  ui_tomato.h  yellow.pro
debug/: moc_Dialog.cpp  moc_analogclock.cpp  moc_predefs.h  qrc_tomato.cpp
resource/: tomato.qrc
